# image-to-stl

./: CLAUDE.md  README-CN.md  STL_FILES_EXPLAINED.md  image_to_stl_flow.md  pyproject.toml
src/: main.py  to_stl.py
